--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap');
+
 * {
     padding: 0;
     margin: 0;
     font-family: Consolas, serif, Arial;
-
+    word-spacing: 0.05em;
     color: white;
     box-sizing: border-box;
+
 }
 
 *:focus {
@@ -43,6 +46,7 @@ button:disabled {
 
 
 #botinfo {
+    font-family: Consolas, serif, Arial;
     background-color: #3e3e3e;
     min-height: 2em;
     width: 100%;
