--- a/css/memberlist.css
+++ b/css/memberlist.css
@@ -1,4 +1,6 @@
 #memberlist-panel{
     background-color: #4a4a4a;
     width: 14em;
+    min-width: 14em;
+    max-width: 14em;
 }
