--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -1,7 +1,9 @@
 
 #sidebar{
     max-height: 100%;
-    width: 15em;
+
+    min-width: 15em;
+    max-width: 15em;
     background-color: #5a5a5a;
 }
 
@@ -42,13 +44,21 @@
 
 #sidebar-header{
     background-color: #4f4f4f;
+
     display: flex;
-    height: 32px;
-    justify-content: center;
+    min-height: 32px;
+    padding-left: 1em;
+    justify-content: flex-start;
     align-items: center;
-    font-size: .9em;
-    font-weight: bold;
+
 }
+
+#sidebar-header-guildname{
+    font-size: .8em;
+    font-weight: bolder;
+
+}
+
 
 #sidebar-channel-container{
     padding-top: .3em;
